Token - réparation du bleu foncé en thème sombre Bouton Icone - déplacement de la css du composant svelte dans un fichier scss

--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -187,6 +187,8 @@
   --qc-color-blue-piv-rgb: 114, 178, 235;
   --qc-color-blue-medium: #ADCDEB;
   --qc-color-blue-medium-rgb: 173, 205, 235;
+  --qc-color-blue-dark: #C6DBEE;
+  --qc-color-blue-dark-rgb: 198, 219, 238;
   --qc-color-purple: #B3A5D4;
   --qc-color-purple-rgb: 179, 165, 212;
   --qc-color-grey-pale: #1C2025;
