--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -272,6 +272,7 @@ $themes-tokens: (
             regular : #3B95E1,
             piv: #72B2EB,
             medium : #ADCDEB,
+            dark: #C6DBEE,
         ),
         purple: #B3A5D4,
         grey : (
