--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -8,6 +8,7 @@
 @use "base/fonts" as *;
 @use "base/shadings" as *;
 @use "base/form" as *;
+@use "base/accessibility" as *;
 @use "utilities/display" as *;
 @use "./components/icons" as *;
 @use "./components/notice" as *;
