--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -431,6 +431,13 @@ code, .qc-code {
   font-family: var(--qc-font-family-code);
 }
 
+@media (max-width: 320px) {
+  body {
+    overflow-wrap: break-word;
+    -webkit-hyphens: auto;
+            hyphens: auto;
+  }
+}
 .qc-bg-color-white {
   background-color: var(--qc-color-white);
 }
