Migration suite à mise à jour des packages pour éviter les erreurs de déprécation, + reorganisation des fichiers : - grid est sorti de base/ - création de lib/gridless-lib pour toutes les fonctions séparées de la grille bootstrap

--- a/src/sdg/scss/_qc-sdg-lib.scss
+++ b/src/sdg/scss/_qc-sdg-lib.scss
@@ -1,5 +1,3 @@
 // @use this file to access every variables, function, mixin or %class from Qc SDG
-@forward "settings/base";
-@forward "settings/tokens";
-@forward "lib/functions";
+@forward "lib/gridless-lib";
 @forward "lib/mixins";
