--- a/src/sdg/scss/base/_fonts.scss
+++ b/src/sdg/scss/base/_fonts.scss
@@ -1,3 +1,4 @@
+@use "sass:meta";
 @use "qc-sdg-lib" as *;
 @use "sass:map";
 @use "sass:list";
@@ -5,7 +6,7 @@
 @if $google-api-font {
   // ci dessous on construit l'url pour importer les fonts google
   // en se basant sur la déclaration des tokens (les font-weights)
-  $font-weights : map.values(map-get($lg-tokens, font, weight));
+  $font-weights : map.values(map.get($lg-tokens, font, weight));
   $url : 'https://fonts.googleapis.com/css2';
   $param-separator : '?';
   @each $name, $fonts in $google-fonts {
@@ -14,7 +15,7 @@
     $separator : '@';
     @each $i in (0,1) {
       @each $scale in $font-weights {
-        @if type-of($scale) != 'map' {
+        @if meta.type-of($scale) != 'map' {
           $request : '#{$request}#{$separator}#{$i},#{$scale}';
           $separator : ';';
         }
