--- a/src/sdg/scss/utilities/_display.scss
+++ b/src/sdg/scss/utilities/_display.scss
@@ -1,5 +1,7 @@
-@use "base/grid/settings" as *;
-@use "base/grid/functions" as *;
+// retrait de ces utilitaires pour alléger la css
+@use "sass:map";
+@use "lib/gridless-lib" as *;
+@use "grid/grid-lib" as *;
 
 $spacers : (
     0: 0,
@@ -9,8 +11,33 @@ $spacers : (
     4: token-value(spacer xl),
 );
 
-@import "vendor/bootstrap-rewrite/utilities/display";
-//@import "vendor/bootstrap-rewrite/mixins/deprecate";
+$displays: none, inline, inline-block, block, table, table-row, table-cell, flex, inline-flex !default;
+
+// stylelint-disable declaration-no-important
+
+// equivalent à @import(src/sdg/scss/vendor/bootstrap-rewrite/utilities/_display.scss)
+// Utilities for common `display` values
+
+@each $breakpoint in map.keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    @each $value in $displays {
+      .qc-d#{$infix}-#{$value} { display: $value !important; }
+    }
+  }
+}
+
+
+//
+// Utilities for toggling `display` in print
+//
+
+@media print {
+  @each $value in $displays {
+    .qc-d-print-#{$value} { display: $value !important; }
+  }
+}
 
 .qc-nowrap {
   white-space: nowrap;
