--- a/src/sdg/scss/components/_pivFooter.scss
+++ b/src/sdg/scss/components/_pivFooter.scss
@@ -1,7 +1,13 @@
 @use "qc-sdg-lib" as *;
 
-
 qc-piv-footer {
+  margin-top: rem(40);
+  padding-bottom: rem(4 * $base-spacer);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @include content-font(sm);
 
   ul {
     max-inline-size: none;
@@ -27,5 +33,30 @@ qc-piv-footer {
     }
   }
 
+}
+
+.qc-piv-footer {
+  margin-top: rem(40);
+  padding-bottom: rem(4 * $base-spacer);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .copyright {
+    margin-top: rem(32);
+  }
+  @media (prefers-color-scheme: dark) {
+    svg {
+      fill: token-value(color text primary)
+    }
+  }
 }
 
