Icon - modification de l'api (ajout d'attribut width et height) Notice - correction d'un bug pour ajouter un aria-label par defaut Piv footer - correction d'un bug concernant la couleur de l'icône de pied de page en theme sombre

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -871,6 +871,8 @@ qc-icon {
 .qc-icon {
   display: inline-block;
   flex-shrink: 0;
+  width: var(--img-width);
+  height: var(--img-height);
   background-color: var(--img-color);
 }
 .qc-icon[data-img-size=xs] {
@@ -1480,10 +1482,8 @@ qc-piv-footer ul li a:hover {
 .qc-piv-footer .copyright {
   margin-top: 3.2rem;
 }
-@media (prefers-color-scheme: dark) {
-  .qc-piv-footer svg {
-    fill: var(--qc-color-text-primary);
-  }
+.qc-piv-footer svg {
+  fill: var(--qc-color-text-primary);
 }
 
 .qc-general-alert {
