--- a/src/sdg/scss/components/_icons.scss
+++ b/src/sdg/scss/components/_icons.scss
@@ -12,6 +12,8 @@ qc-icon {
 .qc-icon {
   display: inline-block;
   flex-shrink: 0;
+  width: var(--img-width);
+  height: var(--img-height);
   // TODO questionner une échelle [0 - 10 ou 100]
   @each $size-type, $size in (xs: 12, sm: 16, md: 20, nm: 24, lg: 28, xl: 32) {
     &[data-img-size=#{$size-type}] {
