--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -9,6 +9,7 @@
 @use "base/form";
 @use "base/accessibility";
 @use "utilities/display";
+@use "utilities/themes";
 @use "components/icons";
 @use "components/notice";
 @use "components/pivHeader";
