pivFooter.svelte - mise à jour des images avec celles disponible sur le sites du piv + ajout des attributs width et height + modification de la doc

--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -397,7 +397,7 @@ dl dt {
   font-weight: var(--qc-font-weight-content-regular);
 }
 dl dd {
-  margin-bottom: var(--qc-spacer-list-mb);
+  margin-bottom: var(--qc-spacer-list-item-mb);
 }
 
 .table-overflow {
