--- a/src/sdg/scss/utilities/_themes.scss
+++ b/src/sdg/scss/utilities/_themes.scss
@@ -1,11 +1,11 @@
 @use "qc-sdg-lib" as *;
 
 :root {
-  --qc-light-theme-display: initial;
+  --qc-light-theme-display: block;
   --qc-dark-theme-display: none;
   &.qc-dark-theme {
     --qc-light-theme-display: none;
-    --qc-dark-theme-display: initial;
+    --qc-dark-theme-display: block;
   }
 }
 
