Liens externes - retrait du style dans le composant pous de mettre dans css.

--- a/src/sdg/scss/base/_typography.scss
+++ b/src/sdg/scss/base/_typography.scss
@@ -54,6 +54,9 @@ a {
       content:getImageUrl(external-link);
     }
   }
+  span.qc-ext-link-img {
+    @include external-link-img();
+  }
 
 }
 
