--- a/src/sdg/scss/base/_figure.scss
+++ b/src/sdg/scss/base/_figure.scss
@@ -13,7 +13,7 @@ img {
 
 figure {
   margin: 0 0 token-value(spacer content-block mb);
-  display: block;
+  display: inline-block;
   overflow-x: auto;
   img {
     height: auto;
