--- a/src/sdg/scss/lib/_mixins.scss
+++ b/src/sdg/scss/lib/_mixins.scss
@@ -44,12 +44,13 @@
 }
 
 @mixin external-link-img() {
-  height: rem(16);
-  width: rem(15);
+  height: .7em;
+  width: .7em;
   display: inline-block;
-  mask: getImageUrl(external-link) no-repeat top rem(5) right;
-  mask-size:  rem(11) rem(11);
+  mask: getImageUrl(external-link) no-repeat;
   background: token-value(color link text);
+  mask-size: .7em;
+  margin-left: 4px;
 }
 
 @mixin sr-only() {
