Pied de page PIV - modification des marges, uniquement appliqué au :host (qc-piv-footer) (sinon elles ne fusionnent pas sont donc doublées

--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -269,7 +269,7 @@ table.qc-table.qc-bordered tbody th, table.qc-table.qc-bordered tbody td {
 }
 
 main {
-  padding-bottom: var(--qc-spacer-lg);
+  margin-bottom: var(--qc-spacer-lg);
 }
 
 qc-color-doc {
