--- a/src/sdg/scss/components/_pivFooter.scss
+++ b/src/sdg/scss/components/_pivFooter.scss
@@ -40,8 +40,7 @@ qc-piv-footer {
 }
 
 .qc-piv-footer {
-  margin-top: rem(40);
-  padding-bottom: rem(4 * $base-spacer);
+  //margin-top: rem(40);
   display: flex;
   flex-direction: column;
   align-items: center;
