Correction du style de la saisie semi-auto.

--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -315,6 +315,18 @@ table.qc-table.qc-bordered tbody th, table.qc-table.qc-bordered tbody td {
   background: var(--qc-color-blue-piv);
 }
 
+.ui-helper-hidden-accessible {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 main {
   margin-bottom: var(--qc-spacer-lg);
 }
