Figure  - retour du display: block; + ajustement de l'exemple de figure

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -649,7 +649,7 @@ img {
 
 figure {
   margin: 0 0 var(--qc-spacer-content-block-mb);
-  display: inline-block;
+  display: block;
   overflow-x: auto;
 }
 figure img {
