--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1800,8 +1800,8 @@ qc-search-bar {
 .qc-container-md,
 .qc-container-sm {
   width: 100%;
-  padding-right: calc(1 * var(--qc-grid-gutter) / 2);
-  padding-left: calc(1 * var(--qc-grid-gutter) / 2);
+  padding-right: var(--qc-grid-gutter);
+  padding-left: var(--qc-grid-gutter);
   margin-right: auto;
   margin-left: auto;
 }
